--- a/src/index.template.html
+++ b/src/index.template.html
@@ -9,14 +9,15 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (htmlWebpackPlugin.options.ctx.mode.cordova || htmlWebpackPlugin.options.ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>">
 
-    <link rel="icon" type="image/png" href="statics/icons/favicon.ico">
-    <link rel="icon" type="image/png" sizes="16x16" href="statics/icons/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="statics/icons/favicon.ico">
-    <link rel="icon" type="image/png" sizes="96x96" href="statics/icons/favicon.ico">
-    <link rel="icon" type="image/png" href="statics/icons/favicon.ico">
+    <link rel="icon" type="image/png" href="statics/icons/puga-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="statics/icons/puga-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="statics/icons/puga-icon.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="statics/icons/puga-icon.png">
+    <link rel="icon" type="image/png" href="statics/icons/puga-icon.png">
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
     <div id="q-app"></div>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnFmBvpH5i_riEHfRItdotctU7xAjGKHQ"></script>
   </body>
 </html>
