--- a/src/index.template.html
+++ b/src/index.template.html
@@ -19,5 +19,7 @@
     <!-- DO NOT touch the following DIV -->
     <div id="q-app"></div>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnFmBvpH5i_riEHfRItdotctU7xAjGKHQ"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/" crossorigin="anonymous"></script>
   </body>
 </html>
