--- a/src/index.template.html
+++ b/src/index.template.html
@@ -21,5 +21,11 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnFmBvpH5i_riEHfRItdotctU7xAjGKHQ"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js" integrity="sha384-NaWTHo/8YCBYJ59830LTz/P4aQZK1sS0SneOgAvhsIl3zBu8r9RevNg5lHCHAuQ/" crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("user_D6GyQpULvCwA4JWXdZz5r");
+   })();
+</script>
   </body>
 </html>
